[package]
name = "fleascope-monitor"
version = "0.2.0"
edition = "2021"
description = "Live Monitor for Fleascopes"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daniel-freiermuth/fleascope-monitor-rs"
repository = "https://github.com/daniel-freiermuth/fleascope-monitor-rs"

[features]
default = []
puffin = ["dep:puffin", "dep:puffin_egui", "fleascope-rs/puffin"]

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
egui_plot = "0.34.0"
tokio = { version = "1.49.0", features = ["full"] }
chrono = { version = "0.4.43", features = ["serde"] }
anyhow = "1.0.100"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
fleascope-rs = "0.4.0"
polars = { version = "0.49", features = ["lazy", "dtype-u16"] }
arc-swap = "1.8.0"
puffin = { version = "0.19.1", optional = true }
puffin_egui = { version = "0.29.0", optional = true }

[dependencies.egui_extras]
version = "0.33.3"
features = ["default", "all_loaders"]

# ====== BUILD PROFILES ======

[profile.dev]
opt-level = 0
debug = true
lto = false
# Fast compilation for development

[profile.release]
# Optimized for cargo install users - maximum performance
opt-level = 3           # Maximum optimization
lto = "fat"             # Full link-time optimization across all crates
codegen-units = 1       # Single codegen unit for best optimization
panic = "abort"         # Faster execution, smaller binary
strip = true            # Remove debug symbols for smaller binary
overflow-checks = false # Faster math operations for real-time app
debug = false           # No debug info for production

[profile.release-profiling]
# For developers who need profiling in release mode
inherits = "release"
lto = "thin"            # Some optimization, preserves call structure for profiling
debug = true            # Keep debug symbols for profiling
strip = false           # Keep symbols for meaningful stack traces
codegen-units = 4       # Balance optimization and symbol preservation
panic = "unwind"        # Better stack traces for profiling
